<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true">

    <RelativeLayout
        android:id="@+id/search_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:visibility="gone">

        <EditText
            android:id="@+id/zipcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/zipcode_hint"
            android:maxLength="5"
            android:imeOptions="actionSearch"
            android:inputType="number"/>

        <Button
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/zipcode"
            android:layout_alignEnd="@id/zipcode"
            android:layout_alignRight="@id/zipcode"
            android:text="@string/button_search"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/zipcode"
            android:layout_toLeftOf="@id/search"
            android:layout_toStartOf="@id/search"
            android:text="@string/button_cancel"
            style="@style/Widget.AppCompat.Button.Borderless"/>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        style="@style/Widget.AppCompat.ProgressBar"/>

    <RelativeLayout
        android:id="@+id/error_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/error_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_zip_not_found"/>

        <Button
            android:id="@+id/error_try_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/error_msg"
            android:layout_alignEnd="@id/error_msg"
            android:layout_alignRight="@id/error_msg"
            android:text="@string/button_try_again"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

        <Button
            android:id="@+id/error_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/error_msg"
            android:layout_toLeftOf="@id/error_try_again"
            android:layout_toStartOf="@id/error_try_again"
            android:text="@string/button_cancel"
            style="@style/Widget.AppCompat.Button.Borderless"/>
    </RelativeLayout>

</FrameLayout>